tests/baselines/reference/separateCompilationPlainFile-ES6.errors.txt
tests/cases/compiler/separateCompilationPlainFile-ES6.ts(2,1): error TS1208: Cannot compile namespaces when the '--separateCompilation' flag is provided.


==== tests/cases/compiler/separateCompilationPlainFile-ES6.ts (1 errors) ====
    
    declare function run(a: number): void;
    ~~~~~~~
!!! error TS1208: Cannot compile namespaces when the '--separateCompilation' flag is provided.
    run(1);
    